# taskfi-tlsn

./: .gitignore  .gitmodules  Cargo.toml  Dockerfile  certificate.md  docker-compose.yaml
.github/workflows/: docker.yml  general.yml
config/: base.example.json  base.json  config.yaml  dev.json  prod.json  production.json
docker-init/localstack/: sqs.sh
fixture/tls/: notary.crt  notary.ext
src/: config.json  config.rs  errors.rs  main.rs  startup.rs  telemetry.rs
src/fixture/: notary.key  rootCA.crt  rootCA.key
src/fixture/tls/: notary.crt
src/hyper/: mod.rs
src/notary/: consumer.rs  mod.rs  model.rs  notary.rs
src/r2/: mod.rs
src/routes/: health_check.rs  mod.rs  notarize.rs
