[package]
name = "taskfi-tlsn"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4"
config = "0.14.0"
serde = "1.0.203"
serde_json = "1.0.117"
tokio = "1.37.0"
p256 = "0.13.2"
futures = "0.3.30"
tokio-util = "0.7.11"
hyper = { version = "1.1", features = ["client", "http1"] }
hyper-util = { version = "0.1", features = ["full"] }

tlsn-core = { path = "./dev/tlsn/tlsn-core" }
tlsn-prover = { path = "./dev/tlsn/tlsn-prover" }
tlsn-verifier = { path = "./dev/tlsn/tlsn-verifier" }

