[package]
name = "taskfi-tlsn"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4"
config = "0.14.0"
serde = "1.0.203"
serde_json = "1.0.117"
tokio = "1.37.0"
futures = "0.3.30"
tokio-util = "0.7.11"
hyper = { version = "1.1", features = ["client", "http1"] }
hyper-util = { version = "0.1", features = ["full"] }

elliptic-curve = { version = "0.13.8", features = ["pkcs8"] }
p256 = { version= "0.13.2", features = ["ecdsa"]}

tlsn-core = { path = "./dev/tlsn/tlsn-core" }
tlsn-prover = { path = "./dev/tlsn/tlsn-prover" }
tlsn-verifier = { path = "./dev/tlsn/tlsn-verifier" }
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
tracing-log = "0.2.0"
tracing-actix-web = "0.7.10"
tracing-bunyan-formatter = "0.3.9"
aws-config = { version = "1.1.7", features = ["behavior-version-latest"] }
aws-sdk-s3 = "1.30.0"
once_cell = "1.19.0"


