[package]
name = "taskfi-tlsn"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[target.'cfg(all(not(windows), not(target_env = "musl")))'.dependencies]
jemallocator = "0.3.0"

[dependencies]
actix-web = "4"
aws-config = { version = "1.1.7", features = ["behavior-version-latest"] }
aws-credential-types = { version = "1.2.0", features = ["hardcoded-credentials"] }
aws-sdk-s3 = "1.30.0"
aws-sdk-sqs = "1.32.0"
bincode = "1.3.3"
bytes = "1.6.0"
config = "0.14.0"
elliptic-curve = { version = "0.13.8", features = ["pkcs8"] }
futures = "0.3.30"
glob = "0.3.1"
http-body-util = "0.1.1"
hyper = { version = "1.1", features = ["full"] }
hyper-util = { version = "0.1", features = ["full"] }
once_cell = "1.19.0"
p256 = { version = "0.13.2", features = ["ecdsa"]}
reqwest = { version = "0.12.5", features = ["json"] }
reqwest-retry = "0.5.0"
rustls = "0.21"
rustls-pemfile = "1.0.2"
serde = "1.0.203"
serde_json = "1.0.117"
tokio = { version = "1.37.0", features = ["full"] }
tokio-util = "0.7.11"
tokio-rustls = "0.24.1"
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
tracing-log = "0.2.0"
tracing-actix-web = "0.7.10"
tracing-bunyan-formatter = "0.3.9"

tlsn-core = { path = "./dev/tlsn/tlsn-core" }
tlsn-prover = { path = "./dev/tlsn/tlsn-prover" }
tlsn-verifier = { path = "./dev/tlsn/tlsn-verifier" }
notary-server = { path = "./dev/notary-server" }
